..F....... [ZBX-11209] Fixed textarea and button misalignment
git-svn-id: svn://svn.zabbix.com/branches/dev@62982 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-11209/sass/stylesheets/sass/screen.scss
+++ b/ZBX-11209/sass/stylesheets/sass/screen.scss
@@ -926,6 +926,10 @@ footer {
 
 	.filter-forms {
 		padding: 0 10px;
+
+		.btn-grey {
+			vertical-align: baseline;
+		}
 	}
 
 	.list-table {
@@ -1756,6 +1760,7 @@ button {
 	color: $btn-form-font-color;
 	background-color: $btn-form-bg-color;
 	border-color: $btn-form-border-color;
+	vertical-align: top;
 
 	&:hover {
 		color: $btn-form-font-color;
